--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,10 @@
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}
 
+        {% if site.logo %}
+        <p class="view"><a href="{{site.cv}}">My CV (PDF)</a></p>
+        {% endif %}
+        
         {% if site.show_downloads %}
         <ul class="downloads">
           <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
