--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,9 @@
         {% endif %}
 
         {% if site.logo %}
-        <p class="view"><a href="{{site.cv | relative_url}}">My CV (PDF)</a></p>
+        <ul class="downloads">
+          <li> <a href="https://skishchampi.github.io/assets/files/Aakash_Solanki_CV.pdf">My CV (PDF)</a></li>
+        </ul>
         {% endif %}
         
         {% if site.show_downloads %}
