--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
         {% endif %}
 
         <ul class="downloads">
-          <li> <a href="https://skishchampi.github.io/assets/files/Aakash_Solanki_CV.pdf"><strong>My CV </strong></a></li>
+          <li> <a href="https://skishchampi.github.io/assets/files/Aakash_Solanki_CV.pdf"><strong>CV </strong></a></li>
           <li> <a href="https://in.linkedin.com/in/solankiaakash"><strong>LinkedIn</strong></a></li>
           <li> <a href="https://utoronto.academia.edu/AakashSolanki"><strong>Academia</strong></a></li>            
         </ul>
