--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,8 +32,8 @@
 
         <ul class="downloads">
           <li><a href="http://aakashsolanki.net/blog"><strong>Blog</strong></a></li>
-          <li> <a href="https://skishchampi.github.io/assets/files/Aakash_Solanki_CV.pdf"><strong>CV </strong></a></li>
-          <!-- <li> <a href="https://in.linkedin.com/in/solankiaakash"><strong>LinkedIn</strong></a></li> -->
+          <!--<li> <a href="https://skishchampi.github.io/assets/files/Aakash_Solanki_CV.pdf"><strong>CV </strong></a></li>
+           <li> <a href="https://in.linkedin.com/in/solankiaakash"><strong>LinkedIn</strong></a></li> -->
           <li> <a href="https://utoronto.academia.edu/AakashSolanki"><strong>Academia</strong></a></li>           
         </ul>
         
