--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
     <meta charset="UTF-8">
@@ -27,13 +27,13 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+      <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}
 
         <ul class="downloads">
           <li><a href="http://aakashsolanki.net/blog"><strong>Blog</strong></a></li>
-          <!--<li> <a href="https://skishchampi.github.io/assets/files/Aakash_Solanki_CV.pdf"><strong>CV </strong></a></li>
-           <li> <a href="https://in.linkedin.com/in/solankiaakash"><strong>LinkedIn</strong></a></li> -->
+          <!--<li> <a href="https://skishchampi.github.io/assets/files/Aakash_Solanki_CV.pdf"><strong>CV </strong></a></li> -->
+           <li> <a href="mailto:solanki.aakash@gmail.com"><strong>Email</strong></a></li>
           <li> <a href="https://utoronto.academia.edu/AakashSolanki"><strong>Academia</strong></a></li>           
         </ul>
         
