--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
         <ul class="downloads">
           <li><a href="http://aakashsolanki.net/blog"><strong>Blog</strong></a></li>
           <!--<li> <a href="https://skishchampi.github.io/assets/files/Aakash_Solanki_CV.pdf"><strong>CV </strong></a></li> -->
-           <li> <a href="mailto:solanki.aakash@gmail.com"><strong>Email</strong></a></li>
+           <li> <a href="mailto:mail@aakashsolanki.net"><strong>Email</strong></a></li>
           <li> <a href="https://utoronto.academia.edu/AakashSolanki"><strong>Academia</strong></a></li>           
         </ul>
         
