Fix blog nav link to use relative URL and same tab

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         <ul class="downloads">
-          <li><a href="https://aakashsolanki.net/blog" target="_blank" rel="noopener noreferrer"><strong>Blog</strong></a></li>
+          <li><a href="{{ '/blog' | relative_url }}"><strong>Blog</strong></a></li>
           <li><a href="https://orcid.org/0000-0002-4879-6998" target="_blank" rel="noopener noreferrer"><strong>ORCID</strong></a></li>
           <li><a href="mailto:mail@aakashsolanki.net"><strong>Email</strong></a></li>
           <li><a href="https://utoronto.academia.edu/AakashSolanki" target="_blank" rel="noopener noreferrer"><strong>Academia</strong></a></li>
