Remove academia/email links, fix CSS stylesheet URL

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     </script>
 {% seo %}
     <link rel="icon" href="{{ '/assets/img/favicon.svg' | relative_url }}" type="image/svg+xml">
-    <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
   </head>
   <body>
     <div class="wrapper">
@@ -29,8 +29,6 @@
         <ul class="downloads">
           <li><a href="{{ '/blog' | relative_url }}"><strong>Blog</strong></a></li>
           <li><a href="https://orcid.org/0000-0002-4879-6998" target="_blank" rel="noopener noreferrer"><strong>ORCID</strong></a></li>
-          <li><a href="mailto:mail@aakashsolanki.net"><strong>Email</strong></a></li>
-          <li><a href="https://utoronto.academia.edu/AakashSolanki" target="_blank" rel="noopener noreferrer"><strong>Academia</strong></a></li>
         </ul>
 
         <button id="theme-toggle" aria-label="Toggle dark mode" title="Toggle dark mode"></button>
